--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spotify Micro Interaction</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Manrope&family=Source+Sans+3:wght@400;700&family=Work+Sans&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
@@ -31,5 +35,7 @@
         </header>
     </article>
 </body>
+<script src="script.js"></script>
+
 
 </html>
